# naturregnskap_maps_uploader

./: .copier-answers.yml  .env.example  README.md  docker-compose.yml  pyproject.toml  style.json  style.yml
scripts/: README.md  generate_linear_gradient.py  generate_pmtiles.sh  pyproject.toml  shell.nix
scripts/src/: generate_pmtiles.py
src/: api.py  config.py  main.py  upload.py
src/nina_catalogue_client/: README.md  __init__.py  client.py
src/nina_catalogue_client/api/layer_groups/: layer_groups_create.py  layer_groups_destroy.py  layer_groups_list.py  layer_groups_partial_update.py  layer_groups_retrieve.py  layer_groups_update.py
src/nina_catalogue_client/api/layers/: layers_create.py  layers_destroy.py  layers_list.py  layers_partial_update.py  layers_retrieve.py  layers_update.py
src/nina_catalogue_client/api/maps/: maps_create.py  maps_destroy.py  maps_list.py  maps_partial_update.py  maps_retrieve.py  maps_update.py
src/nina_catalogue_client/api/raster_sources/: raster_sources_create.py  raster_sources_destroy.py  raster_sources_list.py  raster_sources_partial_update.py  raster_sources_retrieve.py  raster_sources_update.py  raster_sources_upload_create.py
src/nina_catalogue_client/api/vector_sources/: vector_sources_create.py  vector_sources_destroy.py  vector_sources_list.py  vector_sources_update.py  (+3 more)
src/nina_catalogue_client/models/: __init__.py  layer.py  layer_group.py  map_.py  paginated_layer_group_list.py  paginated_layer_list.py  paginated_map_list.py  paginated_raster_source_list.py  paginated_vector_source_list.py  patched_layer.py  patched_layer_group.py  patched_map.py  patched_raster_source.py  patched_vector_source.py  raster_source.py  raster_sources_upload_create_body.py  vector_source.py  vector_sources_upload_create_body.py
src/templates/: layer_description.html  project_description.html
