[project]
authors = [
  {name = "Niccolò Cantù", email = "niccolo.cantu@nina.no"}
]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "django-environ",
  "fiona",
  "click",
]
description = ""
license = {text = "GPL-3.0+"}
name = "scripts"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.scripts]
"generate_pmtiles" = "generate_pmtiles:run"
